--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
@@ -7,6 +7,6 @@
     {{ template.block('_top')|raw }}
     <div class="jmn-wrapper">
         {{ template.block('_header')|raw }}
-        <div id="{{- "tree-#{id}" -}}" class="jmn-tree jmn-sortable"></div>
+        <div id="{{- "tree-#{id}" -}}" class="jmn-tree jmn-sortable"  data-types="{{ config.nodes.types('_root')|json_encode|e('html_attr') }}"></div>
     </div>
 </div>
