--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/login.html.twig
@@ -7,7 +7,7 @@
 
 {% block title %}{{ 'user.login.title'|trans }}{% endblock title %}
 
-{% block body %}
+{% block wrapper %}
     <div class="login-box">
         <div class="card card-outline card-{{ theme_color }}">
             <div class="card-header text-center">
@@ -60,5 +60,5 @@
             </div>
         </div>
     </div>
-{% endblock body %}
+{% endblock wrapper %}
 
