--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/change_password.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/change_password.html.twig
@@ -8,7 +8,7 @@
     {{ parent() }}
 {% endblock breadcrumb %}
 
-{% block content %}
+{% block body %}
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="card card-{{ theme_color }} card-outline">
@@ -28,4 +28,4 @@
         </div>
     </div>
     {{ form_end(form) }}
-{% endblock content %}
+{% endblock body %}
