--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
@@ -9,7 +9,7 @@
 {% endblock breadcrumb %}
 
 
-{% block content %}
+{% block body %}
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="card card-{{ theme_color }} card-outline">
@@ -74,4 +74,4 @@
                 </div>
         </div>
     </div>
-{% endblock content %}
+{% endblock body %}
