--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/edit.html.twig
@@ -8,7 +8,7 @@
     {{ parent() }}
 {% endblock breadcrumb %}
 
-{% block content %}
+{% block body %}
     {{ form_start(form, { 'action': path(routes.USER_PROFILE_EDIT) }) }}
     <div class="row">
         <div class="col-md-6 offset-md-3">
@@ -43,4 +43,4 @@
         </div>
     </div>
     {{ form_end(form) }}
-{% endblock content %}
+{% endblock body %}
