ref: delete layout.html.twig

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/resetting/check_email.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/resetting/check_email.html.twig
@@ -1,21 +1,19 @@
 {%- trans_default_domain 'emsco-user' -%}
-{% extends '@EMSAdminUI/bootstrap5/layout.html.twig' %}
+{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
 
 {% block title %}{{ 'user.resetting.title'|trans }}{% endblock %}
-{% block pagetitle %}{% endblock %}
-{% block subtitle %}{% endblock %}
 
-{% block content %}
-<div class="row">
-    <div class="col-md-12">
-        <div class="box box-info">
-            <div class="box-header with-border">
-                <h3 class="box-title">{{ 'user.resetting.title'|trans }}</h3>
-            </div>
-            <div class="box-body">
-                <p>{{ 'user.resetting.check_email'|trans({'%tokenLifetime%': (tokenLifetime / 3600) })|nl2br }}</p>
+{% block body %}
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card card-{{ theme_color }}">
+                <div class="card-header with-border">
+                    <h3 class="card-title">{{ 'user.resetting.title'|trans }}</h3>
+                </div>
+                <div class="card-body">
+                    <p>{{ 'user.resetting.check_email'|trans({'%tokenLifetime%': (tokenLifetime / 3600) })|nl2br }}</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
-{% endblock content %}
+{% endblock body %}
