--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/dashboard/browser/dashboard-browser-modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/dashboard/browser/dashboard-browser-modal.html.twig
@@ -1,11 +1,7 @@
-{% extends '@EMSAdminUI/bootstrap5/base-light.html.twig' %}
+{% extends '@EMSAdminUI/bootstrap5/base/html5.html.twig' %}
 {% trans_default_domain 'emsco-core' %}
 
 {% block title %}{{ dashboard.label }}{% endblock %}
-
-{%- block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('dashboard-browser.css', 'emscore') }}">
-{% endblock %}
 
 {%- block extraheader %}
     {%- if dashboard.option('header') is not null -%}
@@ -13,16 +9,15 @@
     {%- endif -%}
 {% endblock %}
 
-{% block main %}
+{% block wrapper %}
     <div id="dashboard-browser" data-type="{{ dashboard.definition }}">
         {%- if dashboard.option('body') is not null -%}
             {{- include(template_from_string(dashboard.option('body'), "Body template for Dashboard " ~ dashboard.name)) -}}
         {%- endif -%}
     </div>
-{% endblock %}
+{% endblock wrapper %}
 
 {% block javascripts %}
-    <script src="{{ asset('dashboard-browser.js', 'emscore') }}"></script>
     {%- if dashboard.option('footer') is not null -%}
         {{- include(template_from_string(dashboard.option('footer'), "Footer template for Dashboard " ~ dashboard.name)) -}}
     {%- endif -%}
