--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -31,8 +31,8 @@
 
 {%- block _itemNode -%}
     {%- apply spaceless -%}
-        {%- set collapsed = item.id in load_ids -%}
-        <div class="{{ html_classes('jmn-node', { 'jmn-collapsible': item.hasChildren }) }}" data-id="{{ item.id }}" data-type="{{ item.type }}">
+        {%- set collapsed = item.id in load_ids|default([]) or item == activeItem or item.hasChild(activeItem) -%}
+        <div class="{{ html_classes('jmn-node', { 'jmn-collapsible': item.hasChildren, 'jmn-node-active': item == activeItem }) }}" data-id="{{ item.id }}" data-type="{{ item.type }}">
             {{ block('_itemRow') }}
             {%- if node.leaf == false -%}
                 <div id="{{ "children-#{item.id}" }}" class="jmn-children jmn-sortable" data-types="{{ config.nodes.types(item.type)|json_encode|e('html_attr') }}">
