--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -114,7 +114,10 @@
 {%- endblock modal_title -%}
 
 {%- block modal_body -%}
-    {{ form(form.data) }}
+    {{ form_start(form) }}
+    {{ form_widget(form.data) }}
+    {% if form._item_hash is defined %}{{ form_widget(form._item_hash) }}{% endif %}
+    {{ form_end(form) }}
 {%- endblock modal_body -%}
 
 {%- block modal_footer -%}
